tests/files/type_checker_tests/should_pass/077.cmdr
//Test that post-increment operations type check
a = 1.1;
x = a++;
