tests/files/type_checker_tests/should_fail/104.cmdr
//Should fail post-increment on something not a lvalue
true++;
